--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document DZ_3</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="card">
         <img class="card-foto" src="img/wl.jpg" alt="IL.wl">
+        <h1 style="color:blue; font-size: 35px;">Нажми на кнопку, чтобы изменить цвет элемента с текстом</h1>
+        <button type="button" style="display: block;" onclick="changeColor();">Change color </button>  
+        <h1 style="color: green; font-size: 35px;">Нажми на кнопку, чтобы изменить цвет текста на противоположный</h1>
+        <button type="button" style="display: block;" onclick="changeColor1()">Кнопка</button>
+        
         <h1 class="card-title">Леонид Маслов</h1>
         <div class="card-text">
             <p>Студент факультета <br> 'Разработчик' GB-University</p>
             <p>Учился в разных учебных заведениях, имею 4 диплома</p>
             <p>Рботаю</p>
         </div>
+        
         <h2 class="card-subtitle">Если коротко, то:</h2>
         <ul class="card-list">
             <li>Работал по основной профессии - инженер электрик</li>
