--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <div class="card">
         <img class="card-foto" src="img/wl.jpg" alt="IL.wl">
-        <h1 style="color:blue; font-size: 35px;">Нажми на кнопку, чтобы изменить цвет элемента с текстом</h1>
-        <button type="button" style="display: block;" onclick="changeColor();">Change color </button>  
-        <h1 style="color: green; font-size: 35px;">Нажми на кнопку, чтобы изменить цвет текста на противоположный</h1>
-        <button type="button" style="display: block;" onclick="changeColor1()">Кнопка</button>
-        
+                
         <h1 class="card-title">Леонид Маслов</h1>
         <div class="card-text">
+            <p style="color:rgb(191, 255, 0); font-size: 20px;">Нажми на кнопку, чтобы изменить цвет элемента с текстом</p>
+            <button type="button" style="display: block;" onclick="changeColor();">Change color 1</button>  
+            <button type="button" style="display: block;" onclick="changeColor1()">Change color 2</button>
             <p>Студент факультета <br> 'Разработчик' GB-University</p>
             <p>Учился в разных учебных заведениях, имею 4 диплома</p>
             <p>Рботаю</p>
